--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export -o build"
+    "export": "next export"
   },
   "dependencies": {
     "@ionic/core": "^5.4.1",
