--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "copy-webpack-plugin": "6.2.1",
+    "pwa-asset-generator": "^6.1.1",
     "typescript": "^4.0.5"
   }
 }
