--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@capacitor/camera": "^4.0.1",
     "@ionic/core": "^5.4.1",
     "babel-plugin-styled-components": "^2.0.7",
     "ionicons": "^5.2.3",
