--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "theme_color": "#e0f6f6",
     "background_color": "#66CFD5",
     "display": "standalone",
-    "start_url": ".",
+    "start_url": "/",
     "name": "Nutros",
     "short_name": "Nutros",
     "icons": [
