--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "babel-plugin-styled-components": "^2.0.7",
     "ionicons": "^5.2.3",
     "next": "latest",
-    "next-pwa": "^5.4.0",
+    "next-offline": "^5.0.5",
+    "next-pwa": "^5.2.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.5"
