--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "@ionic/core": "^5.4.1",
     "babel-plugin-styled-components": "^2.0.7",
     "ionicons": "^5.2.3",
-    "next": "latest",
-    "next-offline": "^5.0.5",
-    "next-pwa": "^5.2.21",
+    "next": "^12.2.5",
+    "next-pwa": "^5.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.5"
