--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "ionicons": "^5.2.3",
     "next": "^12.0.4",
+    "next-offline": "^5.0.5",
     "next-pwa": "^5.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
