--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-pwa": "^5.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gtm-module": "^2.0.11",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
