--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "export": "next export"
   },
@@ -14,6 +15,7 @@
     "next": "^12.0.4",
     "next-offline": "^5.0.5",
     "next-pwa": "^5.4.0",
+    "next-sitemap": "^3.1.45",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-gtm-module": "^2.0.11",
