--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "@ionic/core": "^5.4.1",
     "babel-plugin-styled-components": "^2.0.7",
     "ionicons": "^5.2.3",
-    "next": "^12.0.4",
+    "next": "^13.1.6",
     "next-offline": "^5.0.5",
-    "next-pwa": "^5.4.0",
+    "next-pwa": "^5.6.0",
     "next-sitemap": "^3.1.45",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.6",
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
