--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
+    "react-ios-pwa-prompt": "^1.8.4",
     "styled-components": "^5.3.6",
     "webpack": "^5.75.0"
   },
