--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@capacitor/camera": "^4.0.1",
     "@ionic/core": "^5.4.1",
     "babel-plugin-styled-components": "^2.0.7",
+    "firebase": "^9.19.1",
     "ionicons": "^5.2.3",
     "next": "^13.1.6",
     "next-pwa": "^5.6.0",
