--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^13.1.6",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^3.1.45",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
